# project-site-no-more-duiving

./: index.qmd
gem_sim/src/install/: local_setup.sh  setup.sh
gem_sim/src/install/gem_description/share/gem_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gem_sim/src/install/gem_description/share/gem_description/cmake/: gem_descriptionConfig-version.cmake  gem_descriptionConfig.cmake
gem_sim/src/install/gem_description/share/gem_description/environment/: ament_prefix_path.dsv  path.dsv
gem_sim/src/install/gem_description/share/gem_description/launch/: gem_description.launch.py
gem_sim/src/install/gem_description/share/gem_description/meshes/: base_link.STL  chair_link.STL  door_link.STL  front_camera_link.STL  front_left_emergency_button_link.STL  front_left_head_light_link.STL  front_left_turn_light_link.STL  front_left_wheel_link.STL  front_rack_link.STL  front_right_emergency_button_link.STL  front_right_head_light_link.STL  front_right_turn_light_link.STL  front_right_wheel_link.STL  left_I_link.STL  left_antenna_link.STL  left_blue_outer_link.STL  left_fixed_hinge_link.STL  rear_left_light_link.STL  (+16 more)
gem_sim/src/install/gem_gazebo/lib/gem_gazebo/: drive.py  gem_control.py  odom_to_tf.py
gem_sim/src/install/gem_gazebo/share/gem_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gem_sim/src/install/gem_launch/share/gem_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gem_sim/src/install/mp1/share/mp1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gem_sim/src/log/: latest_build
gem_sim/src/mp1/: CMakeLists.txt  epoch10.pth  package.xml  requirements.txt
gem_sim/src/mp1/launch/: mp1_launch.launch
gem_sim/src/mp1/resources/: Silverstone_parameters.yaml
gem_sim/src/mp1/scripts/: dataset.py  drive.py  generate_bev_config.py  lane_detect.py  line_fit.py  model_utils.py  preprocess.py  simple_enet.py  train.py  worldgt.py
static/images/: ros_bag_mask.webm
(+87 files in other folders)
