cmake_minimum_required(VERSION 3.8)
project(mp1)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(ackermann_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(gazebo_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

# Install Python scripts
#install(PROGRAMS
#  scripts/eval.py
#  scripts/generate_map.py
#  scripts/run_error_calculation.py
#  scripts/preprocess_data.py
#  scripts/run_bev_config.py
#  scripts/run_collect_images.py
#  scripts/run_lane_detection.py
#  scripts/simple_train.py
#  DESTINATION lib/${PROJECT_NAME}
#)

# Install launch files
install(DIRECTORY launch/
  DESTINATION share/${PROJECT_NAME}/launch
)

# Install config files
#install(DIRECTORY config/
#  DESTINATION share/${PROJECT_NAME}/config
#)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package() 
